--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
+
 <head>
   <meta charset="UTF-8">
   <title>The Above you HEAD app</title>
@@ -9,6 +12,67 @@
   <script src="/static/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+
+
+    	<meta charset="utf-8">
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+	<script type="text/javascript">
+	var x = document.getElementById("pizza");
+
+	function showError(error) {
+		switch(error.code) {
+		case error.PERMISSION_DENIED:
+			x.innerHTML="User denied the request for Geolocation."
+			break;
+		case error.POSITION_UNAVAILABLE:
+			x.innerHTML="Location information is unavailable."
+			 break;
+		case error.TIMEOUT:
+			x.innerHTML="The request to get user location timed out."
+			break;
+		case error.UNKNOWN_ERROR:
+			x.innerHTML="An unknown error occurred."
+			break;
+			}
+	}
+
+	function getLocation() {
+		if (navigator.geolocation) {
+			navigator.geolocation.getCurrentPosition(getPizzaLocations, showError);
+		}
+		else{x.innerHTML="Geolocation is not supported by this browser.";}
+	}
+
+	function getPizzaLocations(position) {
+		var d=new Date();
+		$.ajax({
+			url: "/getPizza",
+			data: {
+				lat: position.coords.latitude,
+				long: position.coords.longitude,
+				day: d.getDay()
+			},
+		})
+		.done(function(data) {
+			$("#pizza_listing").html(data);
+		});
+	//	.fail(function() {
+	//		alert( "error" );
+	//	})
+	//	.always(function() {
+	//		alert( "complete" );
+	//	});
+	}
+
+	</script>
+
+
+	<title>It's my pizza and I want it now</title>
+
+
+
 </head>
 <body>
 <div class="container-fluid">
@@ -23,6 +87,16 @@
 </div>
 <div id="content">{% block content %}{% endblock %}</div>
 
+
+<div class="wrapper" style="text-align:center;">
+
+<div id="pizza_listing">
+	<button onclick=getLocation()> Find Your Location </button>
+</div>
+
+</div>
+</body>
+
 <div class="container text-center">
   &copy; Copyright 2016 by <a href="https://twitter.com/mapiator">Jorge Vidinha</a>.
 </div>
@@ -32,8 +106,7 @@
      title="Project on GitHub">
     <svg aria-hidden="true" class="octicon octicon-mark-github" height="24" version="1.1" viewBox="0 0 16 16"
          width="24">
-      <path
-        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
+      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
     </svg>
   </a>
 </div>
